--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+input{
+    outline: 1px solid black;
+}
+
+a{
+    text-decoration: underline;
+    color: dodgerblue;
+}
