--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,6 +1,6 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; */
 
 input{
     outline: 1px solid black;
