--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,6 +1,13 @@
-/* @tailwind base;
+@tailwind base;
 @tailwind components;
-@tailwind utilities; */
+@tailwind utilities;
+
+
+@layer base{
+    html{
+        @apply bg-primary-neutral-dark text-black;
+    }
+}
 
 input{
     outline: 1px solid black;
