Changed theme for all pages

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,6 +5,6 @@
 
 @layer base{
     html{
-        @apply bg-primary-neutral-dark text-black;
+        @apply bg-primary-neutral-dark text-gray-300;
     }
 }
